add_subdirectory(features2d-brisk)
add_subdirectory(features2d-base)
add_subdirectory(features2d-ksurf)
add_subdirectory(features2d-shi-tomasi)
add_subdirectory(filters-base)
add_subdirectory(filters-kuwahara)
add_subdirectory(filters-morphology)
add_subdirectory(template)

if(TARGET opencv_video)
    add_subdirectory(video-segmentation)
endif()

if(TARGET opencv_nonfree)
    add_subdirectory(features2d-patented)
endif()

if(TARGET clw::clw)
    add_subdirectory(features2d-base-opencl)
    add_subdirectory(features2d-ksurf-opencl)
    add_subdirectory(filters-base-opencl)
    add_subdirectory(filters-kuwahara-opencl)
    add_subdirectory(filters-morphology-opencl)
    add_subdirectory(video-segmentation-opencl)
endif()

if(MSVC)
    # AMP only supported with Visual C++
    add_subdirectory(amp)
endif()
