add_subdirectory(template)
add_subdirectory(filters-base)
add_subdirectory(filters-base-opencl)
add_subdirectory(filters-morphology)
add_subdirectory(filters-morphology-opencl)
add_subdirectory(filters-kuwahara)
add_subdirectory(filters-kuwahara-opencl)
add_subdirectory(features2d-base)
add_subdirectory(features2d-base-opencl)
add_subdirectory(features2d-brisk)
add_subdirectory(features2d-keypoints)
add_subdirectory(features2d-ksurf)
add_subdirectory(features2d-ksurf-opencl)
add_subdirectory(features2d-patented)
add_subdirectory(features2d-matchers-opencl)
add_subdirectory(video-segmentation)
add_subdirectory(video-segmentation-opencl)
add_subdirectory(amp)
